# Tetromino-Solver

./: .gitignore  Assignment1_Writeup.md  CMakeLists.txt  README.md  run-tests.sh
include/: Board.h  Pieces.h  TetrominoSolver.h
src/: Board.cpp  Pieces.cpp  TetrominoSolver.cpp  main.cpp
tests/: test3-in.txt  test4-in.txt  test5-in.txt  test6-in.txt  test7-in.txt  test7-out.txt  test8-in.txt  test8-out.txt  test9-in.txt
